ejemplos/nginx/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: nginx.172.22.200.178.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
